# cpp-travis-test

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  check-supported-flags.cmake  compiler-flags.cmake  compiler-flags.mk  sample.cpp  sample.vcxproj  sample_baremetal.cpp  sync-arm-toolchains.sh  test.vcxproj
cmake/: arm-toolchain.cmake  check-supported-flags.cmake  compiler-flags.cmake  coverage.cmake
